--- a/rules/package.json
+++ b/rules/package.json
@@ -16,8 +16,14 @@
     "build": "tsc",
     "prepublishOnly": "tsc"
   },
+  "peerDependencies": {
+    "@gamepark/rules-api": "^5.14.0",
+    "lodash.shuffle": "^4.2.0"
+  },
   "devDependencies": {
-    "@gamepark/rules-api": "~5.10.0",
-    "i18next": "^21.2.4"
+    "@gamepark/rules-api": "~5.14.0",
+    "@types/lodash.shuffle": "^4.2.7",
+    "i18next": "^21.6.14",
+    "lodash.shuffle": "^4.2.0"
   }
 }
