--- a/app/package.json
+++ b/app/package.json
@@ -6,41 +6,39 @@
   "author": "Romain Fromi <romain@game-park.com> (https://game-park.com/)",
   "license": "ISC",
   "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@gamepark/react-client": "~5.14.0",
-    "@gamepark/react-components": "~5.12.0",
-    "@gamepark/rules-api": "~5.14.0",
+    "@dnd-kit/core": "^6.0.8",
+    "@emotion/react": "^11.11.1",
+    "@gamepark/react-game": "~6.8.1",
+    "@gamepark/rules-api": "~6.8.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
-    "@types/react-dnd-multi-backend": "^6.0.1",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
     "customize-cra": "^1.0.0",
-    "emotion-normalize": "^11.0.1",
-    "i18next": "^21.2.4",
+    "i18next": "^22.0.3",
     "imagemin-webp-webpack-plugin": "^3.3.6",
     "intl-messageformat": "^9.9.1",
     "react": "^17.0.2",
     "react-app-rewire-alias": "^1.0.3",
     "react-app-rewired": "^2.1.8",
-    "react-dnd": "^14.0.3",
-    "react-dnd-html5-backend": "^14.0.1",
-    "react-dnd-multi-backend": "^6.0.2",
-    "react-dnd-touch-backend": "^14.1.0",
     "react-dom": "^17.0.2",
-    "react-i18next": "^11.11.4",
-    "react-redux": "^7.2.4",
+    "react-i18next": "^12.0.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.0",
-    "use-long-press": "^2.0.3",
     "web-vitals": "^2.1.0"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.195",
+    "lodash": "^4.17.21"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "eject": "react-app-rewired eject",
+    "deploy": "yarn build && rclone sync build village-pillage:village-pillage.game-park.com --progress --s3-acl=public-read"
   },
   "eslintConfig": {
     "extends": [
