--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
   "license": "ISC",
   "devDependencies": {
     "lerna": "^4.0.0",
-    "typescript": "^4.4.2"
+    "typescript": "^4.9.5"
   },
   "scripts": {
+    "linkall": "yarn link react react-dom react-redux @dnd-kit/core @emotion/react react-i18next @gamepark/rules-api @gamepark/react-client @gamepark/react-game",
+    "unlinkall": "yarn unlink react react-dom react-redux @dnd-kit/core @emotion/react react-i18next @gamepark/rules-api @gamepark/react-client @gamepark/react-game",
+    "linkgp": "yarn link @gamepark/react-client @gamepark/rules-api @gamepark/react-game",
+    "unlinkgp": "yarn unlink @gamepark/react-client @gamepark/rules-api @gamepark/react-game",
     "start": "yarn workspace @gamepark/village-pillage-app run start",
-    "build": "yarn workspace @gamepark/village-pillage-app run build"
+    "build": "yarn workspace @gamepark/village-pillage-app run build",
+    "deploy": "yarn workspace @gamepark/village-pillage-app run deploy"
   }
 }
