--- a/rules/package.json
+++ b/rules/package.json
@@ -17,13 +17,10 @@
     "prepublishOnly": "tsc"
   },
   "peerDependencies": {
-    "@gamepark/rules-api": "^5.14.0",
-    "lodash.shuffle": "^4.2.0"
+    "@gamepark/rules-api": ">=6.8"
   },
   "devDependencies": {
-    "@gamepark/rules-api": "~5.14.0",
-    "@types/lodash.shuffle": "^4.2.7",
-    "i18next": "^21.6.14",
-    "lodash.shuffle": "^4.2.0"
+    "@gamepark/rules-api": "~6.8.0",
+    "i18next": "^22.0.3"
   }
 }
